// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
}
button {
  display: block;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  border: 0;
  padding: 0;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  border-radius: 50%;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 0;
}
@media(hover:hover) {
  button {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}

.label {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.icon {
  transform: translate3d(0,0,0);
}
.popover {
  position: absolute;
  border: none;
  background: none;
  pointer-events: none;
  padding: 0;
  margin: 0;
  overflow: initial;
  flex-direction: column;
  inset: 0;
  width: max-content;
  filter: drop-shadow(0 0 16px rgba(0,0,0,0.3));
  animation: 0.25s keyframes-fadeIn cubic-bezier(0.25,0.1,0.25,1) forwards;
}
.popover:-internal-popover-in-top-layer::backdrop {
  display: none;
}
.popover[popover]:is(:popover-open) {
  display: flex;
}
.arrow {
  align-self: center;
  width: 24px;
  height: 12px;
  clip-path: polygon(50% 0, 100% 110%, 0 110%);
  background: #212225;
}
.content {
  max-width: min(90vw, 27rem);
  width: max-content;
  height: max-content;
  box-sizing: border-box;
  background: #212225;
  padding: 8px 16px;
  pointer-events: auto;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  color: #FBFCFF;
  white-space: inherit;
  border-radius: 4px;
}
@keyframes keyframes-fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}"
`;

exports[`getComponentCss() should return correct css for theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
}
button {
  display: block;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  border: 0;
  padding: 0;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  border-radius: 50%;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 0;
}
@media(hover:hover) {
  button {
    transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}

.label {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.icon {
  transform: translate3d(0,0,0);
}
.popover {
  position: absolute;
  border: none;
  background: none;
  pointer-events: none;
  padding: 0;
  margin: 0;
  overflow: initial;
  flex-direction: column;
  inset: 0;
  width: max-content;
  filter: drop-shadow(0 0 16px rgba(0,0,0,0.3));
  animation: 0.25s keyframes-fadeIn cubic-bezier(0.25,0.1,0.25,1) forwards;
}
.popover:-internal-popover-in-top-layer::backdrop {
  display: none;
}
.popover[popover]:is(:popover-open) {
  display: flex;
}
.arrow {
  align-self: center;
  width: 24px;
  height: 12px;
  clip-path: polygon(50% 0, 100% 110%, 0 110%);
  background: #FFF;
}
.content {
  max-width: min(90vw, 27rem);
  width: max-content;
  height: max-content;
  box-sizing: border-box;
  background: #FFF;
  padding: 8px 16px;
  pointer-events: auto;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  color: #010205;
  white-space: inherit;
  border-radius: 4px;
}
@keyframes keyframes-fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}"
`;
